Copy java options from appimage launcher